; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/nfs/gss/extr_gss_krb5_mech.c_gss_join_mbuf.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/nfs/gss/extr_gss_krb5_mech.c_gss_join_mbuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @gss_join_mbuf(i64 %0, i64 %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i64, i64* %4, align 8
  store i64 %8, i64* %7, align 8
  br label %9

9:                                                ; preds = %19, %3
  %10 = load i64, i64* %7, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %9
  %13 = load i64, i64* %7, align 8
  %14 = call i64 @mbuf_next(i64 %13)
  %15 = icmp ne i64 %14, 0
  br label %16

16:                                               ; preds = %12, %9
  %17 = phi i1 [ false, %9 ], [ %15, %12 ]
  br i1 %17, label %18, label %22

18:                                               ; preds = %16
  br label %19

19:                                               ; preds = %18
  %20 = load i64, i64* %7, align 8
  %21 = call i64 @mbuf_next(i64 %20)
  store i64 %21, i64* %7, align 8
  br label %9

22:                                               ; preds = %16
  %23 = load i64, i64* %7, align 8
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %29

25:                                               ; preds = %22
  %26 = load i64, i64* %7, align 8
  %27 = load i64, i64* %5, align 8
  %28 = call i32 @mbuf_setnext(i64 %26, i64 %27)
  br label %29

29:                                               ; preds = %25, %22
  %30 = load i64, i64* %5, align 8
  store i64 %30, i64* %7, align 8
  br label %31

31:                                               ; preds = %41, %29
  %32 = load i64, i64* %7, align 8
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %38

34:                                               ; preds = %31
  %35 = load i64, i64* %7, align 8
  %36 = call i64 @mbuf_next(i64 %35)
  %37 = icmp ne i64 %36, 0
  br label %38

38:                                               ; preds = %34, %31
  %39 = phi i1 [ false, %31 ], [ %37, %34 ]
  br i1 %39, label %40, label %44

40:                                               ; preds = %38
  br label %41

41:                                               ; preds = %40
  %42 = load i64, i64* %7, align 8
  %43 = call i64 @mbuf_next(i64 %42)
  store i64 %43, i64* %7, align 8
  br label %31

44:                                               ; preds = %38
  %45 = load i64, i64* %7, align 8
  %46 = icmp ne i64 %45, 0
  br i1 %46, label %47, label %51

47:                                               ; preds = %44
  %48 = load i64, i64* %7, align 8
  %49 = load i64, i64* %6, align 8
  %50 = call i32 @mbuf_setnext(i64 %48, i64 %49)
  br label %51

51:                                               ; preds = %47, %44
  %52 = load i64, i64* %4, align 8
  %53 = icmp ne i64 %52, 0
  br i1 %53, label %54, label %56

54:                                               ; preds = %51
  %55 = load i64, i64* %4, align 8
  br label %65

56:                                               ; preds = %51
  %57 = load i64, i64* %5, align 8
  %58 = icmp ne i64 %57, 0
  br i1 %58, label %59, label %61

59:                                               ; preds = %56
  %60 = load i64, i64* %5, align 8
  br label %63

61:                                               ; preds = %56
  %62 = load i64, i64* %6, align 8
  br label %63

63:                                               ; preds = %61, %59
  %64 = phi i64 [ %60, %59 ], [ %62, %61 ]
  br label %65

65:                                               ; preds = %63, %54
  %66 = phi i64 [ %55, %54 ], [ %64, %63 ]
  store i64 %66, i64* %7, align 8
  %67 = load i64, i64* %7, align 8
  ret i64 %67
}

declare dso_local i64 @mbuf_next(i64) #1

declare dso_local i32 @mbuf_setnext(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
